[package]
name = "aipa"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }  # For HTTP requests
serde_json = "1.0"  # For JSON parsing
tokio = { version = "1.0", features = ["full"] }  # For async runtime
